--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,28 +38,57 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const filteredInventors = inventors.filter(inventor => inventor.year <= 1599 && inventor.year >= 1500);
+
+    console.log(filteredInventors);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const inventorsFirstLast = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+
+    console.log(inventorsFirstLast);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortedInventors = inventors.sort((a, b) => b.year - a.year);
+
+    console.log(sortedInventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const sumOfYearsOfAllInventors = inventors.reduce((accumulator, currentValue) => accumulator + (currentValue.passed - currentValue.year), 0);
+
+    console.log(sumOfYearsOfAllInventors);
 
     // 5. Sort the inventors by years lived
+    const sortedInventorsByAge = inventors.sort((a, b) => (b.passed - b.year) - (a.passed - a.year));
 
+    console.log(sortedInventorsByAge);
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortedPeople = people.sort((a, b) => {
+      const [aLast, aFirst] = a.split(', ');
+      const [bLast, bFirst] = b.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+
+    console.log(sortedPeople);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const sumOfEachItem = data.reduce((obj, item) => {
+      if(!obj[item]) obj[item] = 0;
+      obj[item]++;
+      return obj;
+    }, {});
+
+    console.log(sumOfEachItem);
 
   </script>
 </body>
