--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,15 +27,31 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
-    // Array.prototype.every() // is everyone 19 or older?
+    const currentYear = new Date().getFullYear();
+    const checkIfAnyoneIsAdult = people.some(person => currentYear - person.year >= 19);
+
+    console.log({checkIfAnyoneIsAdult});
+
+     // Array.prototype.every() // is everyone 19 or older?
+      const checkIfEveryoneIsAdult = people.every(person => currentYear - person.year >= 19);
+
+      console.log({checkIfEveryoneIsAdult});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+      const findCommentByID = comments.find(comment => comment.id === 823423);
+      console.log(findCommentByID);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex(comment => comment.id === 823423);
+    console.log(index);
+
+    const newComments = [...comments.slice(0, index),
+                         ...comments.slice(index + 1, comments.length)];
+    console.log(newComments);
 
   </script>
 </body>
